fix: 修复移动端长宽比变形问题
- 添加自适应画布缩放系统
- 保持 720:1280 (9:16) 长宽比
- 支持屏幕旋转自动调整
- 优化移动端显示效果

--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background: #000;
       }
       
       canvas {
         display: block;
-        max-width: 100%;
-        max-height: 100%;
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: crisp-edges;
       }
     </style>
   </head>
